# ai-stock-hunter

./: .env.example  .gitignore  README.md  SECRET.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.references/cyberagent/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh.md  SKILL.md  pyproject.toml
.references/cyberagent/.github/workflows/: publish.yml
.references/cyberagent/docs/: disclaimer.md  quickstart.md
.references/cyberagent/examples/: README.md  basic.py
.references/cyberagent/references/: sa-canon.md
.references/cyberagent/src/cyberagent/: __init__.py  chain.py  classifier.py  cli.py  llm_adapter.py  models.py  web.py
.references/cyberagent/src/cyberagent/adapters/: __init__.py  crypto.py  stock.py
.references/cyberagent/src/cyberagent/depts/: __init__.py
.references/cyberagent/src/cyberagent/prompts/: __init__.py  departments.py
.references/cyberagent/tests/: test_chain.py  test_version.py
.references/open-xquant/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.references/open-xquant/agent/roles/: oxq-component-author-worker.md  oxq-coordinator.md  oxq-data-inspection-worker.md  oxq-report-reviewer-worker.md  oxq-report-writer-worker.md  oxq-runner-worker.md  oxq-runtime-auditor-worker.md  oxq-spec-auditor-worker.md  oxq-strategy-builder-worker.md
.references/open-xquant/agent/skills/audit-runtime-semantics/: SKILL.md
.references/open-xquant/agent/skills/audit-strategy-spec/: SKILL.md
.references/open-xquant/docs/: agent-guide.md  architecture.md  custom-broker-guide.md  human-guide.md
.references/open-xquant/examples/app/: live_trading_demo.py
.references/open-xquant/examples/modules/: 01_spec_and_validate.py  02_data_and_universe.py  03_backtest_and_artifacts.py  04_audit_and_robustness.py  05_report_and_experiment.py  06_signals_and_rules.py  07_optimize.py  08_factor_eval.py  09_observe.py  10_alpaca_live.py
.references/open-xquant/examples/strategies/: factor_screen.py  momentum_rotation_spec.py  roc_timing_spec.py  sma_crossover_spec.py  spec_validation_demo.py
.references/open-xquant/src/oxq/: __init__.py  market_calendar.py
.references/open-xquant/src/oxq/audit/: __init__.py  (+2 more)
.references/open-xquant/tests/: conftest.py
.references/open-xquant/tests/agent/: test_report_chart_builder_skill.py
.references/open-xquant/tests/audit/: test_reproducibility.py  test_research_bias.py
.references/open-xquant/tests/cli/: test_agent_install.py  test_agent_manifest.py  test_agent_uninstall.py  test_agent_upgrade.py  test_backtest_json.py  test_doctor.py  test_main.py  test_report_assets.py  test_report_qa.py  test_research_init.py  test_sdk_bundle.py
.references/open-xquant/tests/contrib/: test_alpaca_market_data.py
.references/open-xquant/tests/core/: test_aliases.py  test_component_catalog.py  test_currency.py  test_engine.py  test_engine_snapshots.py  test_engine_tracer.py  test_registry.py  test_registry_metadata.py  test_types.py  test_types_snapshot.py
.references/open-xquant/tests/data/: test_adapters.py  test_eastmoney_fetcher.py  test_factors.py  test_factors_eastmoney_expanded.py  test_init.py  test_loaders.py  test_manifest.py  test_market.py  test_providers.py  test_timezone.py  test_yfinance_fetcher.py
.references/open-xquant/tests/factor_eval/: test_bias.py  test_bundle.py  test_cash_period.py  test_comparison.py  test_conditional.py  test_decay.py  test_decay_curve.py  test_hit_rate.py  test_icir.py  test_metrics.py  test_preprocessing.py  test_profit_loss.py  test_returns.py  test_tearsheet.py  test_ts_ic.py  test_turnover.py
.references/open-xquant/tests/indicators/: test_accrual_ratio.py  test_annualized_volatility.py  test_bp.py  test_builtin.py  test_cash_flow_ratio.py  test_ep.py  test_garch_volatility.py  test_hurst_exponent.py  test_ichimoku.py  test_log_return.py  test_market_cap.py  test_momentum.py  test_nday_return.py  test_net_profit_margin.py  test_pb.py  test_pe.py  test_power_ratio.py  test_ratio.py  test_roe_change.py  test_rolling_mdd.py  test_rolling_volatility.py  test_simple_momentum.py  test_turnover_rate.py
.references/open-xquant/tests/observe/: test_audit.py  test_detector.py  test_experiment.py  test_experiment_registry.py  test_export.py  test_hashing.py  test_init.py  test_monitor.py  test_tracer.py
.references/open-xquant/tests/optimize/: test_paramset.py  test_search.py  test_validation.py  test_walk_forward.py
.references/open-xquant/tests/portfolio/: test_analytics.py  test_execution_report.py  test_metrics_profile.py  test_optimizers.py  test_orderbook.py  test_signal_to_position.py  test_top_n_ranking_optimizer.py
.references/open-xquant/tests/report/: test_assets.py  test_facts.py  test_generator.py  test_qa.py  test_renderers.py
.references/open-xquant/tests/robustness/: test_runner.py
.references/open-xquant/tests/rules/: test_constraint.py  test_exit.py  test_order.py  test_risk.py
.references/open-xquant/tests/signals/: test_comparison.py  test_composite.py  test_crossover.py  test_formula.py  test_ops.py  test_peak.py  test_roc_timing.py  test_threshold.py  test_timestamp.py
.references/open-xquant/tests/spec/: test_audit_schema.py  test_compiler.py  test_execution_semantics.py  test_validator.py
.references/open-xquant/tests/tools/: test_chart.py  test_coerce_params.py  test_data.py  test_data_factor.py  test_data_financial.py  test_data_generate_mock.py  test_data_mock_financial_macro.py  test_engine_tools.py  test_factor_eval_tool.py  test_factor_eval_ts_tool.py  test_live.py  test_momentum_strategy_e2e.py  test_observe.py  test_optional_dependency_isolation.py  test_report.py  test_spec.py  test_strategy_dynamic_registration.py  test_strategy_tools.py  test_timezone_currency_api.py  test_universe.py  test_universe_index.py
.references/open-xquant/tests/trade/: test_alpaca_client.py  test_alpaca_integration.py  test_fees.py  test_fill_timestamp.py  test_live_broker.py  test_order_generator.py  test_sim_broker.py  test_slippage.py
.references/open-xquant/tests/universe/: test_index.py
(+1236 files in other folders)
